# learn-cmake

./: .gitignore  README.md
01_Getting_Started/: CMakeLists.txt  README.md  config.h.in  main.cpp
02_Adding_Subdirectories/: README.md
02_Adding_Subdirectories/Demo01/: CMakeLists.txt  README.md  app.cpp
02_Adding_Subdirectories/Demo01/pkg/table/src/: Table.cpp
02_Adding_Subdirectories/Demo01/pkg/utils/simple_argparse/include/: simple_argparse.h
02_Adding_Subdirectories/Demo02/: CMakeLists.txt  README.md
02_Adding_Subdirectories/Demo02/pkg/: CMakeLists.txt
02_Adding_Subdirectories/Demo02/pkg/table/: CMakeLists.txt
02_Adding_Subdirectories/Demo02/pkg/table/include/: Table.h
02_Adding_Subdirectories/Demo02/pkg/utils/: CMakeLists.txt
02_Adding_Subdirectories/Demo02/pkg/utils/simple_argparse/: CMakeLists.txt
02_Adding_Subdirectories/Demo02/pkg/utils/string_utils/: CMakeLists.txt
02_Adding_Subdirectories/Demo03/: CMakeLists.txt  README.md
02_Adding_Subdirectories/Demo03/pkg/: CMakeLists.txt
02_Adding_Subdirectories/Demo03/pkg/table/: CMakeLists.txt
02_Adding_Subdirectories/Demo03/pkg/utils/: CMakeLists.txt
02_Adding_Subdirectories/Demo03/pkg/utils/simple_argparse/: CMakeLists.txt
03_Adding_Library/: CMakeLists.txt  README.md  app.cpp
03_Adding_Library/Lib/: CMakeLists.txt
03_Adding_Library/Lib/table/: CMakeLists.txt
03_Adding_Library/Lib/utils/simple_argparse/: CMakeLists.txt
03_Adding_Library/Lib/utils/string_utils/: CMakeLists.txt
04_Control_Flow/: ControlFlow_Demo.cmake  README.md
(+4 files in other folders)
